// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Picture should encode sources that have query params 1`] = `
<picture>
  <source
    media="(min-width: 640px)"
    srcSet="https://test.com/api/2/img/http:%2F%2Fhere.com%2Flogo.png%3Fparam%3D1/resize?size=200&auth=abc123"
  />
  <source
    media="(min-width: 990px)"
    srcSet="https://test.com/api/2/img/http:%2F%2Fhere.com%2Flogo-large.png%3Fparam%3D2/optimise?auth=abc123"
  />
  <img
    alt="YO!"
    loading="lazy"
    srcSet="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw=="
  />
</picture>
`;

exports[`Picture should not apply URL transformation for data: sources 1`] = `
<picture>
  <source
    media="(min-width: 640px)"
    srcSet="data:ABCDEF"
  />
  <source
    media="(min-width: 990px)"
    srcSet="https://test.com/api/2/img/https://here.com/logo-large.png/optimise?auth=abc123"
  />
  <img
    alt="YO!"
    loading="lazy"
    srcSet="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw=="
  />
</picture>
`;

exports[`Picture should not crash if one of the breakpoints don't have source 1`] = `
<picture>
  <source
    media="(min-width: 640px)"
    srcSet="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw=="
  />
  <source
    media="(min-width: 990px)"
    srcSet="https://test.com/api/2/img/https://here.com/logo-large.png/optimise?auth=abc123"
  />
  <img
    loading="lazy"
    srcSet="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw=="
  />
</picture>
`;

exports[`Picture should render when not lazy 1`] = `
<picture>
  <source
    media="(min-width: 640px)"
    srcSet="https://test.com/api/2/img/https://here.com/logo.png/resize?size=200&auth=abc123"
  />
  <source
    media="(min-width: 990px)"
    srcSet="https://test.com/api/2/img/https://here.com/logo-large.png/optimise?auth=abc123"
  />
  <img
    src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw=="
  />
</picture>
`;

exports[`Picture should render when not lazy and with all breakpoints specified 1`] = `
<picture>
  <source
    media="(min-width: 640px)"
    srcSet="https://test.com/api/2/img/https://here.com/logo.png/resize?size=200&auth=abc123"
  />
  <source
    media="(min-width: 990px)"
    srcSet="https://test.com/api/2/img/https://here.com/logo-large.png/optimise?auth=abc123"
  />
  <img
    src="https://test.com/api/2/img/https://here.com/logo.png/resize?size=200&auth=abc123"
  />
</picture>
`;

exports[`Picture should render with alt attribute 1`] = `
<picture>
  <source
    media="(min-width: 640px)"
    srcSet="https://test.com/api/2/img/https://here.com/logo.png/resize?size=200&auth=abc123"
  />
  <source
    media="(min-width: 990px)"
    srcSet="https://test.com/api/2/img/https://here.com/logo-large.png/optimise?auth=abc123"
  />
  <img
    alt="YO!"
    loading="lazy"
    srcSet="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw=="
  />
</picture>
`;

exports[`Picture should render with minimum parameters 1`] = `
<picture>
  <source
    media="(min-width: 640px)"
    srcSet="https://test.com/api/2/img/https://here.com/logo.png/resize?size=200&auth=abc123"
  />
  <source
    media="(min-width: 990px)"
    srcSet="https://test.com/api/2/img/https://here.com/logo-large.png/optimise?auth=abc123"
  />
  <img
    loading="lazy"
    srcSet="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw=="
  />
</picture>
`;

exports[`Picture should replace source that starts with // to https:// 1`] = `
<picture>
  <source
    media="(min-width: 640px)"
    srcSet="https://test.com/api/2/img/http://here.com/logo.png/resize?size=200&auth=abc123"
  />
  <source
    media="(min-width: 990px)"
    srcSet="https://test.com/api/2/img/http://here.com/logo-large.png/optimise?auth=abc123"
  />
  <img
    alt="YO!"
    loading="lazy"
    srcSet="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw=="
  />
</picture>
`;
